--- a/GestionClinica/pom.xml
+++ b/GestionClinica/pom.xml
@@ -8,13 +8,15 @@
     <artifactId>GestorClinica</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    <dependency>
-        <groupId>com.mysql</groupId>
-        <artifactId>mysql-connector-j</artifactId>
-        <version>9.5.0</version>
-        <scope>system</scope>
-        <systemPath>${project.basedir}/lib/mysql-connector-j-9.5.0.jar</systemPath>
-    </dependency>
+ <dependencies>
+     <dependency>
+         <groupId>com.mysql</groupId>
+         <artifactId>mysql-connector-j</artifactId>
+         <version>9.5.0</version>
+         <scope>system</scope>
+         <systemPath>${project.basedir}/lib/mysql-connector-j-9.5.0.jar</systemPath>
+     </dependency>
+ </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
