--- a/GestionClinica/pom.xml
+++ b/GestionClinica/pom.xml
@@ -16,6 +16,13 @@
          <scope>system</scope>
          <systemPath>${project.basedir}/lib/mysql-connector-j-9.5.0.jar</systemPath>
      </dependency>
+     <dependency>
+         <groupId>com.jtattoo</groupId>
+         <artifactId>JTattoo</artifactId>
+         <version>1.6.13</version>
+         <scope>system</scope>
+         <systemPath>${project.basedir}/lib/JTattoo-1.6.13.jar</systemPath>
+     </dependency>
  </dependencies>
 
     <properties>
@@ -23,26 +30,18 @@
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+    
     <build>
-        <resources>
-            <resource>
-                <directory>${basedir}</directory>
-                <includes>
-                    <include>*</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>${basedir}</directory>
-                <includes>
-                    <include>*</include>
-                </includes>
-            </resource>
-            <resource>
-                <directory>src/main/resources/</directory>
-                <includes>
-                    <include>**</include>
-                </includes>
-            </resource>
-        </resources>
+        <plugins>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>modelo.prueba.Main2</mainClass>
+                    <classpathScope>runtime</classpathScope>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 </project>
