--- a/GestionClinica/src/main/Resources/Config.properties
+++ b/GestionClinica/src/main/Resources/Config.properties
@@ -1,4 +1,4 @@
-db.name=grupo1
+db.name=Grupo_1
 db.url=jdbc:mysql://localhost:3306/
-db.user=root
-db.password=
+db.user=progra_c
+db.password=progra_c
